--- a/src/app/shared/components/header/notification-dropdown/notification-dropdown.component.html
+++ b/src/app/shared/components/header/notification-dropdown/notification-dropdown.component.html
@@ -1,7 +1,8 @@
 <div class="relative">
   <button
-    class="relative flex items-center justify-center text-gray-500 transition-colors bg-white border border-gray-200 rounded-full dropdown-toggle hover:text-gray-700 h-11 w-11 hover:bg-gray-100 dark:border-gray-800 dark:bg-gray-900 dark:text-gray-400 dark:hover:bg-gray-800 dark:hover:text-white"
+    class="btn-icon relative flex items-center justify-center text-gray-500 transition-colors bg-white border border-gray-200 rounded-full dropdown-toggle hover:text-gray-700 h-11 w-11 hover:bg-gray-100 dark:border-gray-800 dark:bg-gray-900 dark:text-gray-400 dark:hover:bg-gray-800 dark:hover:text-white"
     (click)="toggleDropdown()"
+    aria-label="Notifications"
   >
     <span
       class="absolute right-0 top-0.5 z-10 h-2 w-2 rounded-full bg-orange-400"
@@ -35,7 +36,8 @@
       </h5>
       <button
         (click)="toggleDropdown()"
-        class="text-gray-500 transition dark:text-gray-400 hover:text-gray-700 dark:hover:text-gray-200"
+        class="btn-icon text-gray-500 transition dark:text-gray-400 hover:text-gray-700 dark:hover:text-gray-200"
+        aria-label="Close notifications"
       >
         <svg
           class="fill-current"
